# dtcc-data

./: .gitignore  CMakeLists.txt  README-server.md  README.md  pyproject.toml
.github/workflows/: ci-build-tests.yml  ci-wheels.yml  ci.yml
db/: elevationAPI_metadata.sql
docs/: installation.md  usage.md
scripts/: import_las_data.sh
src/: client.py  create-atlas-geopkg.py  create-atlas-gpkg-modular.py  create-atlas-gpkg.py  create_atlas_lidar.py  nohup.out  run.sh  server-gpkg-ssh.py  server-gpkg.py  server-lidar-gpkg-merged-github-auth.py  server-lidar-gpkg-ssh-merged.py  server-lidar-ssh.py  server-lidar.py  server_lidar.py
src/access_requests/: requests.jsonl
src/deploy/: run.sh  run2.sh
src/dtcc-atlas/: backend.py
src/dtcc-atlas/atlas/: __init__.py  checker.py  prototype.py
src/dtcc_atlas/: __init__.py  demo.md  hardcodedatlas.py  pyproject.toml
src/dtcc_atlas/atlas/: __init__.py  atlas.py  checker.py  logging.py  parameters.py  prototype.py  utils.py
src/dtcc_atlas/atlas/templates/: index.html
src/dtcc_atlas/server/: backend.py  create_atlas.py  create_atlas_gpkg.py  tiling.py
src/dtcc_atlas/server/templates/: index.html
src/dtcc_data/: __init__.py  auth.py  cache.py  client.py  geopkg.py  gpkg_datasets.json  lidar.py  logging.py  overpass.py  utils.py  wrapper.py
src/dtcc_data/atlas/: __init__.py  atlas.py  checker.py  prototype.py
src/dtcc_data/scripts/: README.md  dtcc-get-data-from-LM.py  dtcc_download_demo_data.py  las_to_elevation_data.py
src/dtcc_data/server/: backend.py  create_atlas_gpkg.py  create_atlas_lidar.py  hardcoded_bounds.json
src/dtcc_data/server/templates/: index.html
src/dtcc_data/servers/: elevation_server.py
src/dtcc_template/: __init__.py  client.py
tests/: run-tests  test_lidar.py  test_wrapper.py  tests.py
tests/python/: atlas.py  tests.py
utils/: import_las_data.sh
utils/dtcc-atlas/: backend.py  checker.py  create_atlas.py  demo.md  demo.py  file_to_coords.json  gpkg_test.py  hardcodedatlas.py  prototype.py  pyproject.toml  sample-request.py  tiling.py
utils/dtcc-atlas/atlas/: __init__.py  checker.py  utils.py
utils/dtcc-upload/: app.py
utils/dtcc-upload/templates/: login.html  upload.html
utils/dtcc-upload/utils/keys/: certificate.pem  key.pem
