[build-system]
requires = ["scikit-build-core", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtcc-data"
version = "0.9.1"
description = "DTCC Data"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "aiohttp==3.11.11",
  "fastapi==0.115.6",
  "folium==0.19.2",
  "laspy==2.5.4",
  "pyproj==3.7.0",
  "requests==2.32.3"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
dtcc-template-main = "dtcc_template.scripts:main.main"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
